Added two OL classes our code is using. There's still a lot of stuff there we're *not* using however
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@52904 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/SlippyMap/OpenLayers/config/slippymap.cfg
+++ b/SlippyMap/OpenLayers/config/slippymap.cfg
@@ -18,6 +18,8 @@ OpenLayers/Control/Navigation.js
 OpenLayers/Control/PanZoomBar.js
 OpenLayers/Control/ScaleLine.js
 OpenLayers/Control/SelectFeature.js
+OpenLayers/Control/Panel.js
+OpenLayers/Control/Button.js
 OpenLayers/Layer.js
 OpenLayers/Layer/GML.js
 OpenLayers/Layer/Markers.js
