--- a/cldr/Makefile
+++ b/cldr/Makefile
@@ -1,6 +1,6 @@
 .PHONY: help all clean
 
-COMMON=http://www.unicode.org/Public/cldr/2.0.1/common.zip
+CORE=http://www.unicode.org/Public/cldr/2.0.1/core.zip
 
 help:
 	@echo "'make all' to download CLDR data and rebuild files."
@@ -12,17 +12,15 @@ all: LanguageNames.php
 distclean:
 	rm -f core.zip
 	rm -rf core
-	rm -f common.zip
-	rm -rf common
 
 clean:
 	rm -f LanguageNames[A-Z]*.php
 
-LanguageNames.php: common/
+LanguageNames.php: core/
 	php rebuild.php
 
-common/: common.zip
-	unzip common.zip -d common
+core/: core.zip
+	unzip core.zip -d core
 
-common.zip:
-	curl -C - -O $(COMMON) || wget $(COMMON) || fetch $(COMMON)
+core.zip:
+	curl -C - -O $(CORE) || wget $(CORE) || fetch $(CORE)
